k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: jquerystatic
spec:
  selector:
    app: jquerystatic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
