k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jquerystatic-ingress
  namespace: jquerystatic
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jquerystatic.awslearnings.com
    http:
      paths:
      - path:
        backend:
          serviceName: jqueryservice
          servicePort: 80
